# ship-python

./: .gitignore  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  example_ship_go_capture.pcapng  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
ci/linux/: build_python_package.sh  create_venv.sh  gen_protocol.sh  install_dependencies.sh  lint.sh  test_unit.sh  typecheck.sh
ci/win32/: create_venv.cmd  install_dependencies.cmd  lint.cmd  test_unit.cmd  typecheck.cmd  update_dependencies.cmd
src/shipproto/: abstract_layer.py  cmi_layer.py  csh_layer.py  cshp_layer.py  example_client.py  finish_first.py  schedule_at.py  shipproto.py  ski_hex_test.py  timer.py  trust_manager.py  websocket.py
src/shipproto/connection_layers/: cmi_layer.py  csh_layer.py  cshp_layer.py  data_layer.py  pin_layer.py
unit_test/: test_main.py
